Add description
https://jira.i-novus.ru/browse/RDMSYNC-18